--- a/AppBolivar/Src/Home.fx.yaml
+++ b/AppBolivar/Src/Home.fx.yaml
@@ -3428,7 +3428,15 @@ Home As screen:
         BorderStyle: =BorderStyle.None
         ChevronBackground: =RGBA(0, 0, 0, 0)
         ChevronFill: =RGBA(0, 0, 0, 1)
-        DefaultSelectedItems: =//Debe aparecer la primer sede que estoy en la relacion
+        DefaultSelectedItems: |-
+            =//Debe aparecer la primer sede que estoy en la relacion
+            With({
+               temp: Filter('public.medical_center_users_relacion', correo = User().Email)
+            
+            },
+            
+             Filter('public.medical_center_sedes', id in temp.id_sede)
+            )
         DisplayFields: =["sede"]
         Font: =Font.'Segoe UI'
         FontWeight: =FontWeight.Semibold
