--- a/AppBolivar/Src/scHistoriaMedicaOftalmologia.fx.yaml
+++ b/AppBolivar/Src/scHistoriaMedicaOftalmologia.fx.yaml
@@ -3196,18 +3196,18 @@ scHistoriaMedicaOftalmologia As screen:
                         fecha_registro:Now(),
                         activo:true,
                         version:First(Sort(Filter('public.mc_historia_oftalmologia',cod_hc_principal=HMSelected.cod_hm),version,SortOrder.Descending)).version+1,
-                        filiacion_ocupacion:  TextInput15.Text,
-                        filiacion_procedencia: TextInput15_1.Text,
-                        anamnesis_motivo: TextInput15_2.Text,
-                        anamnesis_relato_enf: TextInput15_3.Text,
-                        anamnesis_generales: tiGinecoLugNacimieto_4.Text,
-                        anamnesis_familiares: tiGinecoLugNacimieto_3.Text,
-                        anamnesis_oftalmicas: tiGinecoLugNacimieto_1.Text,
-                        anamnesis_alergias: tiGinecoLugNacimieto_2.Text,
-                        ex_lensometria_od: TextInput15_4.Text,
-                        ex_lensometria_oi:  TextInput15_5.Text,
-                        ex_autorefracto_od: TextInput15_6.Text,
-                        ex_autorefracto_oi:TextInput15_7.Text,
+                        filiacion_ocupacion:  TextInput15_43.Text,
+                        filiacion_procedencia: TextInput15_44.Text,
+                        anamnesis_motivo: TextInput15_45.Text,
+                        anamnesis_relato_enf: TextInput15_46.Text,
+                        anamnesis_generales: tiGinecoLugNacimieto_42.Text,
+                        anamnesis_familiares: tiGinecoLugNacimieto_43.Text,
+                        anamnesis_oftalmicas: tiGinecoLugNacimieto_44.Text,
+                        anamnesis_alergias: tiGinecoLugNacimieto_45.Text,
+                        ex_lensometria_od: TextInput15_47.Text,
+                        ex_lensometria_oi:  TextInput15_48.Text,
+                        ex_autorefracto_od: TextInput15_49.Text,
+                        ex_autorefracto_oi:TextInput15_50.Text,
                         /**
                         {tipo: 1, des: "Lejos OD", avsc: "", esf: "", cyl: "", eje: "", avcc: "", dip: ""},
                         {tipo: 2, des: "Lejos OI", avsc: "", esf: "", cyl: "", eje: "", avcc: "", dip: ""},
